--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
+            android:onClick="przeslij"
+        />
     <EditText
             android:layout_width="200dp"
             android:layout_height="48dp"
@@ -44,21 +46,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.522"
             app:layout_constraintTop_toBottomOf="@+id/Name"
-            android:layout_marginTop="20dp"/>
-    <EditText
-            android:layout_width="200dp"
-            android:layout_height="48dp"
-            android:inputType="text"
-            android:hint="@string/przedmiot"
-            android:ems="10"
-            android:id="@+id/subject"
-            android:background="@drawable/roundedbutton"
-            android:padding="10dp"
-            android:gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.522"
-            app:layout_constraintTop_toBottomOf="@+id/surname"
             android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
